@@ -1,0 +1,18 @@
+Tests scripts sorting in the scripts panel.
+
+Debugger was enabled.
+    *Non*URL*path
+    block.js?block=foo
+    ga.js
+    lenta.ban?pg=4883&ifr=1
+    lenta.ban?pg=5309&ifr=1
+    top100.jcn?80674
+/_js/production
+    motor.js?1308927432
+/i
+    xgemius.js
+/i/js
+    jquery-1.5.1.min.js
+    jquery.cookie.js
+Debugger was disabled.
+
